# sarkofag_robot

./: aktualizuj.bash
cascade_regulator/: CMakeLists.txt  package.xml
cascade_regulator/src/: CascadeRegulator.cpp  CascadeRegulator.h
ec_hw_model/: CMakeLists.txt
ec_hw_model/src/: EcDriveModel.cpp  EcDriveModel.h  EcHwModel.cpp  EcHwModel.h
ec_manager/: package.xml
ec_manager/src/: ECManager.cpp  ECManager.h
hardware_interface_mw/src/: HardwareInterfaceMW.cpp  HardwareInterfaceMW.h
hw_model/src/: HwModel.cpp  HwModel.h
sark_bringup/: CMakeLists.txt  package.xml
sark_bringup/config/: common-imports.ops  master_config.yaml  sark-inside.ops  sark.ops  sark_analyzers.yaml  sark_hardware.ops  sark_hardware_cas.ops  sark_inside.ops  sark_inside_p1.ops  sark_inside_p2.ops  sark_nohardware.ops
sark_bringup/launch/: sark-hardware-cas.launch  sark-hardware.launch  sark-inside.launch  sark-nohardware.launch
sark_bringup/scripts/: sark_multi_trajectory.py  sark_simple_trajectory.py  sark_synchro.py  sark_synchro_joint.py  sark_synchro_motor.py
sark_description/: CMakeLists.txt  package.xml
sark_diagnostic/: CMakeLists.txt  package.xml
sark_diagnostic/src/: SarkDiagnostic.h  (+1 more)
sark_kinematic/: CMakeLists.txt  package.xml
sark_manager/: CMakeLists.txt  package.xml
sark_regulator/: CMakeLists.txt  package.xml
sark_supervisor/: CMakeLists.txt  package.xml
sarkofag/: CMakeLists.txt  package.xml
scripts/: aktualizuj.bash  aktualizuj_sim.bash  sarkofag.rosinstall  sarkofag_setup.sh  sarkofag_setup_sim.sh  sarkofag_sim.rosinstall  update_and_compile.bash
(+21 files in other folders)
